Fixed calculation of duplicates.
See https://github.com/jenkinsci/analysis-core-plugin/pull/24.